Made correction in html button tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="track-buttons">
         <button onclick="start()">Start</button>
-        <button onclick="stop()"></button>
+        <button onclick="stop()">Stop</button>
     </div>
 
     <div id="saved-data">
