--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="map"></div>
+    <!-- <div id="map"></div>
 
     <div id="track-buttons">
         <button onclick="start()">Start</button>
@@ -23,7 +23,7 @@
     <div id="saved-data">
         <p id="time"></p>
         <p id="distance"></p>
-    </div>
+    </div> -->
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="scripts.js"></script>
