Set modal-wrapper in html and css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 </head>
 
 <body>
+    <h1>RunWalk Tracker</h1>
+
+    <button onclick="start()">Start</button>
+
+    <div id="modal-wrapper">
+        <div id="map">
+            <button onclick="stop()">Stop</button>
+        </div>
+
+    </div>
     <!-- <div id="map"></div>
 
     <div id="track-buttons">
