Placed map in modal window

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 <body>
     <h1>RunWalk Tracker</h1>
 
-    <button onclick="start()">Start</button>
+    <button onclick="launch()">Launch Map</button>
 
     <div id="modal-wrapper">
         <div id="map">
+            <button onclick="start()">Start</button>
             <button onclick="stop()">Stop</button>
         </div>
 
