Moved track buttons and comment out elements.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <button onclick="launch()">Launch Map</button>
 
     <div id="modal-wrapper">
-        <div id="map">
-            <button onclick="start()">Start</button>
-            <button onclick="stop()">Stop</button>
+        <div id="modal-content">
+            <div id="map"></div>
+            <div class="track-btns">
+                <button onclick="start()">Start</button>
+                <button onclick="stop()">Stop</button>
+            </div>
         </div>
-
     </div>
     <!-- <div id="map"></div>
 
