Added div for run data

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             </div>
         </div>
     </div>
+
+    <div id="run-data">
+        <p id="time"></p>
+        <p id="distance"></p>
+    </div>
+    
     <!-- <div id="map"></div>
 
     <div id="track-buttons">
