Made start button launch btn

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 <body>
     <h1>RunWalk Tracker</h1>
 
-    <button onclick="launch()">Launch Map</button>
+    <!-- <button onclick="launch()">Launch Map</button> -->
+    <button onclick="start()">Start</button>
 
     <div id="modal-wrapper">
         <div id="modal-content">
             <div id="map"></div>
             <div class="track-btns">
-                <button onclick="start()">Start</button>
+                <!-- <button onclick="start()">Start</button> -->
                 <button onclick="stop()">Stop</button>
             </div>
         </div>
