--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="map"></div>
             <div class="track-btns">
                 <!-- <button onclick="start()">Start</button> -->
-                <button onclick="stop()">Stop</button>
+                <button id="save-data" onclick="stop()">Stop</button>
             </div>
         </div>
     </div>
