Wrapped time and distance in new container

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     </div>
 
     <div id="run-data">
-        <p id="time"></p>
-        <p id="distance"></p>
+        <div id="saved-runs">
+            <p id="time"></p>
+            <p id="distance"></p>
+        </div>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
