Create saved-runs div

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
     </div>
 
     <div id="run-data">
-        <div id="saved-runs">
-            <p id="time"></p>
-            <p id="distance"></p>
-        </div>
+        <p id="time"></p>
+        <p id="distance"></p>
     </div>
+
+    <div id="saved-runs"></div>
+
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="scripts.js"></script>
