Add p tags to saved-runs div

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <p id="distance"></p>
     </div>
 
-    <div id="saved-runs"></div>
+    <div id="saved-runs">
+        <p></p>
+    </div>
 
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
