Remove  p tags from div and run-data div

--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
         </div>
     </div>
 
-    <div id="run-data">
-        <p id="time"></p>
-        <p id="distance"></p>
-    </div>
+    <p id="time"></p>
+    <p id="distance"></p>
 
-    <div id="saved-runs">
-        <p></p>
-    </div>
+    <div id="saved-runs"></div>
 
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
