Comment out p tags

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
     </div>
 
-    <p id="time"></p>
-    <p id="distance"></p>
+    <!-- <p id="time"></p>
+    <p id="distance"></p> -->
 
     <div id="saved-runs"></div>
 
