--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <p id="time"></p>
     <p id="distance"></p> -->
 
-    <div id="saved-runs"></div>
+    <div id="displayed-runs"></div>
 
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
