--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     <div id="displayed-runs"></div>
 
+    <div id="saved-runs"></div>
+
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="scripts.js"></script>
