--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <p id="time"></p>
     <p id="distance"></p> -->
 
-    <div id="displayed-runs"></div>
+    <div id="display-runs"></div>
 
     <div id="saved-runs"></div>
 
