--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.13/dayjs.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
