Added clear data button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <h1>RunWalk Tracker</h1>
     
-    <button onclick="start()">Start</button>
+    <button class="start-btn" onclick="start()">Start</button>
+
+    <button class="reset-btn">Clear</button>
 
     <div id="modal-wrapper">
         <div id="modal-content">
