Edit filter menu content

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div id="date-filter">
         <button class="filter" onclick="dateFilter()">Filter Data</button>
         <div id="content" class="date-content">
-            <p>Today</p>
-            <p>Last 14 Days</p>
-            <p>Last 30 Days</p>
-            <p>Everything</p>
+            <p><a href="#">Today</a></p>
+            <p><a href="#">Last 14 Days</a></p>
+            <p><a href="#">Last 30 Days</a></p>
+            <p><a href="#">Show Everything</a></p>
         </div>
     </div>
 
