Made more edits to filter menu

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <input onchange= "filterDate()" id="end-date" type="date" value="">
     </div> -->
 
-    <div id="date-filter">
-        <button class="filter" onclick="dateFilter()">Filter Data</button>
-        <div id="content" class="date-content">
+    <div id="data-filter">
+        <button class="filter" onclick="dataFilter()">Filter Data</button>
+        <div id="content" class="data-content">
             <p><a href="#">Today</a></p>
             <p><a href="#">Last 14 Days</a></p>
             <p><a href="#">Last 30 Days</a></p>
