--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div id="data-filter">
         <button class="filter" onclick="dataFilter()">Filter Data</button>
         <div id="content" class="data-content">
-            <p><a href="#" data-value="today">Today</a></p>
-            <p><a href="#" data-value="14days">Last 14 Days</a></p>
-            <p><a href="#" data-value="30days">Last 30 Days</a></p>
-            <p><a href="#" data-value="everything">Show Everything</a></p>
+            <p><a href="#" onclick="filterRuns('today')">Today</a></p>
+            <p><a href="#" onclick="filterRuns('last14')">Last 14 Days</a></p>
+            <p><a href="#" onclick="filterRuns('last30')">Last 30 Days</a></p>
+            <p><a href="#" onclick="filterRuns('all')">Show Everything</a></p>
         </div>
     </div>
 
