--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <button class="start-btn" onclick="start()">Start</button>
 
-    <button class="reset-btn" onclick="reset()">Reset</button>
+    <!-- <button class="reset-btn" onclick="reset()">Reset</button> -->
 
     <!-- <div id="date-filter">
         <input onchange= "filterDate()" id="start-date" type="date" value="">
