Changed function name for dropdown

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div> -->
 
     <div id="data-filter">
-        <button class="filter" onclick="dataFilter()">Filter Data</button>
+        <button class="filter" onclick="dataFilterTool()">Filter Data</button>
         <div id="content" class="data-content">
             <p><a href="#" onclick="filterRuns('today')">Today</a></p>
             <p><a href="#" onclick="filterRuns('last14')">Last 14 Days</a></p>
