Wrapped start btn in footer tag

--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
             <div id="display-runs"></div>
             <div id="saved-runs"></div>
         </div>
+    </main>
 
+    <footer>
         <div class="start">
             <button class="start-btn" onclick="start()">Start</button>
         </div>
-    </main>
+    </footer>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.13/dayjs.min.js"></script>
