Added start icon to start btn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
+    <script src="https://kit.fontawesome.com/4f19959d2d.js" crossorigin="anonymous"></script>
+
     <title>RunWalk Fitness Tracker</title>
 </head>
 
@@ -54,7 +56,7 @@
 
     <footer>
         <div class="start">
-            <button class="start-btn" onclick="start()">Start</button>
+            <button class="start-btn" onclick="start()"><i class="fa-solid fa-play"></i></button>
         </div>
     </footer>
 
