Added stop icon and added styling

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="modal-content">
                 <div id="map"></div>
                 <div class="track-btns">
-                    <button id="save-data" onclick="stop()">Stop</button>
+                    <button id="save-data" onclick="stop()"><i class="fa-solid fa-stop"></i></button>
                 </div>
             </div>
         </div>
