--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link type="text/css" rel="stylesheet" href="styles.css" />
 
+    <link rel="stylesheet" href="https://use.typekit.net/fio0ndi.css">
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
     <script src="https://kit.fontawesome.com/4f19959d2d.js" crossorigin="anonymous"></script>
@@ -17,8 +19,11 @@
 <body>
     
     <header>
-        <h1>RunWalk Tracker</h1>
-
+        <div class="logo">
+            <h1>RunWalk</h1>
+            <h2>Tracker</h2>
+        </div>
+        
         <div class="header-btns">
 
             <div class="reset">
