Added styling to filter menu and display divs

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <button class="filter" onclick="dataFilterTool()">Filter Data</button>
                 <div id="content" class="data-content">
                     <p><a href="#" onclick="filterRuns('today')">Today</a></p>
-                    <p><a href="#" onclick="filterRuns('last14')">Last 14 Days</a></p>
-                    <p><a href="#" onclick="filterRuns('last30')">Last 30 Days</a></p>
-                    <p><a href="#" onclick="filterRuns('all')">Show Everything</a></p>
+                    <p><a href="#" onclick="filterRuns('last14')">14 Days</a></p>
+                    <p><a href="#" onclick="filterRuns('last30')">30 Days</a></p>
+                    <p><a href="#" onclick="filterRuns('all')">Everything</a></p>
                 </div>
             </div>
 
