--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         
             <div id="data-filter">
-                <button class="filter" onclick="dataFilterTool()">Filter Data</button>
+                <button class="filter" onclick="dataFilterTool()">Filter</button>
                 <div id="content" class="data-content">
                     <p><a href="#" onclick="filterRuns('today')">Today</a></p>
                     <p><a href="#" onclick="filterRuns('last14')">14 Days</a></p>
