Added vertical logo image

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 <body>
     
     <header>
-        <div class="logo">
-            <h1>RunWalk</h1>
-            <h2>Tracker</h2>
+        <div class="logo-vertical">
+            <img src="images/vertical-logo.png" alt="vertical logo">
         </div>
         
         <div class="header-btns">
