--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <div class="logo-vertical">
             <img src="images/vertical-logo.png" alt="vertical logo">
         </div>
+
+        <div class="logo-horizontal">
+            <img src="images/horizontal-logo.png" alt="horizontal logo">
+        </div>
         
         <div class="header-btns">
 
