--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <title>RunWalk Fitness Tracker</title>
 </head>
 
-<body>
-    
+<body id="randomImg">
     <header>
         <div class="logo-vertical">
             <img src="images/vertical-logo.png" alt="vertical logo">
@@ -60,6 +59,7 @@
             <div id="display-runs"></div>
             <div id="saved-runs"></div>
         </div>
+
     </main>
 
     <footer>
@@ -67,7 +67,7 @@
             <button class="start-btn" onclick="start()"><i class="fa-solid fa-play"></i></button>
         </div>
     </footer>
-
+    
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.13/dayjs.min.js"></script>
     <script src="scripts.js"></script>
