Fixed background image styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>RunWalk Fitness Tracker</title>
 </head>
 
-<body id="randomImg">
+<body class="bkg-img" id="randomImg">
     <header>
         <div class="logo-vertical">
             <img src="images/vertical-logo.png" alt="vertical logo">
