Added load more button to saved-runs div

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     
         <div id="all-data">
             <div id="display-runs"></div>
-            <div id="saved-runs"></div>
+            <div id="saved-runs">
+                <button id="load-more" onclick="loadMore()">Load More</button>
+            </div>
         </div>
 
     </main>
