Added styling to load more btn.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div id="all-data">
             <div id="display-runs"></div>
             <div id="saved-runs">
-                <button id="load-more" onclick="loadMore()">Load More</button>
+                <button id="load-more" onclick="loadMore()"><i class="fa-solid fa-angle-down"></i></button>
             </div>
         </div>
 
