Added aria-label attribute to buttons.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="header-btns">
 
             <div class="reset">
-                <button name="clear" class="reset-btn" onclick="reset()">Reset</button>
+                <button aria-label="clear" class="reset-btn" onclick="reset()">Reset</button>
             </div>
         
             <div id="data-filter">
@@ -57,7 +57,7 @@
                     <div id="map"></div>
                 </div>
                 <div class="track-btns">
-                    <button name="stop" id="save-data" onclick="stop()"><i class="fa-solid fa-stop"></i></button>
+                    <button aria-label="stop" id="save-data" onclick="stop()"><i class="fa-solid fa-stop"></i></button>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
         <div id="all-data">
             <div id="display-runs"></div>
             <div id="saved-runs">
-                <button name="load more" id="load-more" onclick="loadMore()"><i class="fa-solid fa-angle-down"></i></button>
+                <button aria-label="show-more" id="load-more" onclick="loadMore()"><i class="fa-solid fa-angle-down"></i></button>
             </div>
         </div>
 
@@ -73,7 +73,7 @@
 
     <footer>
         <div class="start">
-            <button name="start" class="start-btn" onclick="start()"><i class="fa-solid fa-play"></i></button>
+            <button aria-label="start" class="start-btn" onclick="start()"><i class="fa-solid fa-play"></i></button>
         </div>
     </footer>
     
